; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_sonicvibes.c_snd_sonicvibes_master_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_sonicvibes.c_snd_sonicvibes_master_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_kcontrol = type { i32 }
%struct.sonicvibes = type { i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_kcontrol*)* @snd_sonicvibes_master_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_sonicvibes_master_free(%struct.snd_kcontrol* %0) #0 {
  %2 = alloca %struct.snd_kcontrol*, align 8
  %3 = alloca %struct.sonicvibes*, align 8
  store %struct.snd_kcontrol* %0, %struct.snd_kcontrol** %2, align 8
  %4 = load %struct.snd_kcontrol*, %struct.snd_kcontrol** %2, align 8
  %5 = call %struct.sonicvibes* @snd_kcontrol_chip(%struct.snd_kcontrol* %4)
  store %struct.sonicvibes* %5, %struct.sonicvibes** %3, align 8
  %6 = load %struct.sonicvibes*, %struct.sonicvibes** %3, align 8
  %7 = getelementptr inbounds %struct.sonicvibes, %struct.sonicvibes* %6, i32 0, i32 1
  store i32* null, i32** %7, align 8
  %8 = load %struct.sonicvibes*, %struct.sonicvibes** %3, align 8
  %9 = getelementptr inbounds %struct.sonicvibes, %struct.sonicvibes* %8, i32 0, i32 0
  store i32* null, i32** %9, align 8
  ret void
}

declare dso_local %struct.sonicvibes* @snd_kcontrol_chip(%struct.snd_kcontrol*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
